package edu.fiuba.algo3.modelo;

public class Ballotage implements MecanismoDesempate{
}
