package edu.fiuba.algo3.modelo.Bando;

public interface Bando {
    boolean esMafia();
    String obtenerResultadoInvestigacion();
}
