package edu.fiuba.algo3.modelo.Bando;

public class BandoPadrino extends BandoMafia{
    @Override
    public String obtenerResultadoInvestigacion() {
        return "Ciudadano";
    }
}
