package edu.fiuba.algo3.modelo;

import java.util.List;

public class Diurna extends Fase {
    @Override
    public void ejecutar(List<Jugador> jugadores) {

    }
}
