package edu.fiuba.algo3.modelo;

import java.util.List;

public abstract class Fase {
    public abstract void ejecutar(List<Jugador> jugadores);
}
