package edu.fiuba.algo3.modelo;

public interface HabilidadNocturna {
    public void ejecutar(Jugador objetivo);
}
