package edu.fiuba.algo3.modelo;

public class Investigar implements HabilidadNocturna {

    @Override
    public void ejecutar(Jugador objetivo) {

    }
}
