package edu.fiuba.algo3.modelo;

public class Nula implements HabilidadNocturna {
    @Override
    public void ejecutar(Jugador objetivo) {

    }
}
