package edu.fiuba.algo3.modelo;

public class SinEliminacion implements MecanismoDesempate{
}
